2007-02-24  John Paul Wallington  <jpw@pobox.com>

	* net/tls.el (tls-certtool-program): Fix custom type.

	* mail/feedmail.el (feedmail-message-id-generator)
	(feedmail-date-generator): Fix custom types.

	* mail/rmail.el (rmail-message-filter): Fix custom type.

2007-02-24  Eli Zaretskii  <eliz@gnu.org>

	* startup.el (command-line): If simple.el cannot be found, proceed
	with a warning message.

2007-02-24  Kenichi Handa  <handa@m17n.org>

	* international/utf-8.el (utf-8-pre-write-conversion): Handle the
	case that BEG is a string.

2007-02-24  Chris Moore <dooglus@gmail.com>

	* pgg-pgp5.el (pgg-pgp5-encrypt-region):
	* pgg-pgp.el (pgg-pgp-encrypt-region):
	* pgg-gpg.el (pgg-gpg-encrypt-region):
	Check pgg-encrypt-for-me if no other recipients.

2007-02-23  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmailedit.el (rmail-cease-edit): Restore the Rmail toolbar.

	* textmodes/sgml-mode.el (sgml-validate): Quote the file name with
	shell-quote-argument.

2007-02-23  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* comint.el (comint-read-input-ring): Use comint-input-ring-size
	from the comint buffer instead of the temporary one.

2007-02-23  David Reitter <david.reitter@gmail.com>

	* cus-edit.el (custom-save-all): Canonicalize custom-file before
	storing it in recentf-exclude.

2007-02-23  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (fancy-splash-screens): Make cursor-type buffer-local
	in splash screen.

2007-02-22  J.D. Smith  <jdsmith@as.arizona.edu>

	* progmodes/idlw-shell.el (idlwave-shell-mode): Clean up pending
	commands, for restart.
	(idlwave-shell-current-module): Fix handling of module name by
	type.
	(idlwave-shell-break-in): Update type handling.
	(idlwave-shell-bp-get): Encode type in BP structure.
	(idlwave-shell-set-bp): Fix setting condition/count on disabled
	BPs.
	(idlwave-shell-module-source-query): Query routine info based on
	type.  Fix path parsing for non-compiled files.
	(idlwave-shell-module-source-filter): Don't signal error in