@@ -1,3 +1,8 @@
+2007-02-24  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* startup.el (command-line): Also check if the abbrev file is
+	readable.
+
 2007-02-24  John Paul Wallington  <jpw@pobox.com>
 
 	* net/tls.el (tls-certtool-program): Fix custom type.
